test/sema/exercise/member_expr_assignment.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S { x: number }
struct S2 { x: number }

fn foo(): S {
  return S { x: 1 };
}

fn main(): void {
  mut s = S { x: 0 };
  mut s2 = S2 { x: 0 };

  s.x = 1;
  s2.x = s2;
  // CHECK: [[# @LINE - 1 ]]:10: error: expected to assign 'number' but received 'S2' instead

  foo().x = 1;
}
